--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ input:checked + .quantum-slider:before{transform:translateX(20px)}
       Masa Ga Mampu?
     </div>
     <div class="expired-sub">ACCESS DENIED • LICENSE REQUIRED</div>
-    <button class="expired-btn" onclick="goToWA()">Ok</button>
+    <button class="expired-btn" onclick="goToWA()">Kembali</button>
   </div>
 </div>
 
